# rura_foundation_backend

./: Dockerfile  app.py  main.py  note.txt  pyproject.toml  requirements.txt
config/: database.py
controllers/: course_controller.py  user_controller.py
models/: user.py
routes/: course_routes.py  user_routes.py
schemas/: course.py  response.py  user.py
services/: auth_service.py  deps.py
